--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,15 +56,18 @@ dependencies:
   downloadsfolder: ^1.1.0
   privacy_screen: ^0.0.6
 
+  path: any
+  crypto: any
+  collection: any
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^4.0.0
   build_runner: ^2.4.4
   mobx_codegen: ^2.3.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.5
-  change_app_package_name: ^1.2.0
+  change_app_package_name: ^1.2.0  
+  flutter_test:
+    sdk: flutter
 
 flutter_native_splash:
   color: "#0C131B"
